Remove appsettings dev

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 # App Settings
 /billadamswebdev.Server/appsettings.json
 /billadamswebdev.Server/appsettings.Development.json
+/billadamswebdev.Server/appsettings.Development.json
