--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,47 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# Testing
+/coverage
+
+# Next.js
+/.next/
+/out/
+
+# Production
+/build
+
+# Misc
+.DS_Store
+*.pem
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
+.env*.local
+
+# Vercel
+.vercel
+
+# Typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# Wrangler files
+.wrangler
+.dev.vars
+
 # User-specific files
 *.rsuser
 *.suo
@@ -32,12 +73,6 @@ bld/
 [Oo]ut/
 [Ll]og/
 [Ll]ogs/
-
-# Wrangler
-.dev.vars
-
-# Next.js build output
-.next/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
