--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@
 # Misc
 .DS_Store
 *.pem
+.vscode
 
 # Debug
 npm-debug.log*
@@ -43,6 +44,7 @@ next-env.d.ts
 # Wrangler files
 .wrangler
 .dev.vars
+.toml
 
 # User-specific files
 *.rsuser
